[project]
name = "pykrak"
version = "0.1.0"
description = "Python translation of Michael Porter's KRAKEN (not KRAKENC)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.3",
  "numba>=0.61.2",
  "numpy>=2.2.6",
]

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "ruff>=0.12.5",
]
test = [
  "pyat",
  "scipy>=1.15.3",
]

[tool.uv.sources]
pyat = { git = "https://github.com/hunterakins/pyat" }
